# kino-agent

./: .env.example  .gitignore  README.md  import_csv_to_sqlite.py  langgraph.json  letterboxd_tmdb.py  pyproject.toml
kinoagent/: config.py  graph.py  nodes.py  schemas.py  state.py  tmdb_tools.py
